<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_feed">

    <fragment
        android:id="@+id/navigation_feed"
        android:name="com.f9ld3.Zion.ui.feed.FeedFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_feed" />

    <fragment
        android:id="@+id/navigation_player"
        android:name="com.f9ld3.Zion.ui.player.PlayerFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_player" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.f9ld3.Zion.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>